@@ -15,11 +15,11 @@
 # OR OTHER TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
 # PERFORMANCE OF THIS SOFTWARE.
 
-# $Id: prereq.sh,v 1.5.18.1 2004/12/08 06:14:06 marka Exp $
+# $Id: prereq.sh,v 1.5.18.2 2006/01/03 07:19:32 marka Exp $
 
 ../../genrandom 400 random.data
 
-if $KEYGEN -a RSA -b 512 -n zone -r random.data foo > /dev/null 2>&1
+if $KEYGEN -a RSAMD5 -b 512 -n zone -r random.data foo > /dev/null 2>&1
 then
     rm -f foo*
 else
